--- a/index.html
+++ b/index.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta name="viewport" content="width=device-width, initial scale=1.0">
+<head>
+<meta name="viewport" content="width=device-width, initial scale=1.0">
+<link rel="stylesheet" href="haiya.css">
 <title>Assignment4</title>
 </head>
 <body>
-<style>
-        body{
-            background-color: wheat;
-        }
-        h2{
-            text-align: center;
-        }
-        h1{
-            text-align: center;
-        }
-    </style>
     <div style="
     border:2px solid black;
     width: 100%;
@@ -24,21 +14,22 @@
     padding: 10x;
     background-color: burlywood;">Gabriel Anderson</div>
 </div>
+<div class="kon">
 <h2>Hello, My name is Gabriel Anderson. 
     <br>
-    I am a student at Binus university</h2>
-<div style="
+    I am a student at Binus University majoring in computer science.</h2>
+</div>
+<div class="non" style="
     border:1px solid wheat;
     background-color: burlywood;
-    width:13.5%;
-    height:auto;
-    padding-right: 5px;
-    padding: 10px;">
-<img src="pfp.jpg"  width=200   height=250 alt="Gabriel">
+    width:21%;
+    height:auto;">
+<img src="pfp.jpg"  width=320   height=400 alt="Gabriel">
 </div>
-<div style="
-    text-align:center;">
-     <a href="" target="_blank"><h1>About me</h1></a></div>
-
+<div class="mun" style="
+    text-align: center;"><a href="ha.html" target="_blank"><h1>About me</h1></a></div>
+<div class="kol">
+        <a href="" target="_blank"><h1>Social media</h1></a>
+     </div>
 </body>
-</html>
+</html> 
