--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="mun" style="
     text-align: center;"><a href="ha.html" target="_blank"><h1>About me</h1></a></div>
 <div class="kol">
-        <a href="" target="_blank"><h1>Social media</h1></a>
+        <a href="sosmed.html" target="_blank"><h1>Social media</h1></a>
      </div>
 </body>
 </html> 
