--- a/ha.html
+++ b/ha.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="xiaolang.css">
         <meta name="viewport" content="width=device-width, initial scale=1.0">
-<title>Social media</title>
+<title>About me</title>
 </head>
 <body>
     <style>
@@ -17,5 +18,28 @@
     font-size: 30px;
     padding: 10x;
     background-color: burlywood;">Gabriel Anderson</div>
+    </div>
+    <div class="koop">
+        <br><br>
+        <div class="bobi">
+        <img src="pfp.jpg" width=250 height=300></div>
+        Name : Gabriel Anderson
+        <br>
+        <br>
+        Nim : 2702256315<br><br>
+        Class : L1AC
+        <br><br>
+        Gender : <input  type="radio" name="m" checked   ><label>Male</label>
+        <input  type="radio" name="m"><label>Female</label>
+        <br><br>
+        Programming : <input type="checkbox" checked><label>Python</label>
+        <input type="checkbox" checked><label>CSS</label>    
+        <input type="checkbox" checked><label>HTML</label> 
+        <br><br>
+        Hobbies : Playing games<br>
+                   Watching anime<br>
+                Playing badminton<br><br>
+                Favorite food : Ramen<br>
+    </div>
 </body>
 </html>
