--- a/sosmed.html
+++ b/sosmed.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial scale=1.0">
+        <link rel="stylesheet" href="efsjkefsjkjkegjkle.css">
 <title>Social media</title>
 </head>
 <body>
@@ -16,6 +17,26 @@
     text-align: center;
     font-size: 30px;
     padding: 10x;
-    background-color: burlywood;">Gabriel Anderson</div>
+    background-color: burlywood;">Gabriel Anderson</div><br>
+    <div class="atas">My accounts on social media</div>
+    <div class="kimoi">
+        <div class="nam">
+            <img src="pp ig.jpeg" width="250" height="250">
+            <br><a target="_blank" href="https://instagram.com/gabriel_._anderson?igshid=OGQ5ZDc2ODk2ZA=="> Link</a>
+        </div>
+        <div class="cia">
+            <img src="hoyolab pp.jpg" width="250" height="250">  
+            <br><a target="_blank" href="https://www.hoyolab.com/accountCenter/postList?id=184381797"> Link</a>
+            <br>
+            <div class="em">
+            <center>&#128515</center></div>
+        </div>
+        <div class="haiyah">
+            <center>
+            <img src="pp tt.png" width="250" height="250"><br>   
+           <a target="_blank" href="https://www.tiktok.com/@gamakagami">Link</a>
+            </center>
+        </div>
+    </div>
 </body>
 </html>
