--- a/sosmed.html
+++ b/sosmed.html
@@ -23,6 +23,11 @@
         <div class="nam">
             <img src="pp ig.jpeg" width="250" height="250">
             <br><a target="_blank" href="https://instagram.com/gabriel_._anderson?igshid=OGQ5ZDc2ODk2ZA=="> Link</a>
+        <div class="ham">
+            Contact me : <br>
+            <img src="pp wa.jpeg" width="50" height="50"> :082119113895<br>
+            <img src="pp line.png" width="50" height="50"> : 02827468393<br>
+        </div>
         </div>
         <div class="cia">
             <img src="hoyolab pp.jpg" width="250" height="250">  
