--- a/sosmed.html
+++ b/sosmed.html
@@ -21,7 +21,7 @@
     <div class="atas">My accounts on social media</div>
     <div class="kimoi">
         <div class="nam">
-            <img src="pp ig.jpeg" width="250" height="250">
+            <img class="nop" src="pp ig.jpeg" width="250" height="250">
             <br><a target="_blank" href="https://instagram.com/gabriel_._anderson?igshid=OGQ5ZDc2ODk2ZA=="> Link</a>
         <div class="ham">
             Contact me : <br>
@@ -30,7 +30,7 @@
         </div>
         </div>
         <div class="cia">
-            <img src="hoyolab pp.jpg" width="250" height="250">  
+            <img class="no" src="hoyolab pp.jpg" width="250" height="250">  
             <br><a target="_blank" href="https://www.hoyolab.com/accountCenter/postList?id=184381797"> Link</a>
             <br>
             <div class="em">
@@ -38,7 +38,7 @@
         </div>
         <div class="haiyah">
             <center>
-            <img src="pp tt.png" width="250" height="250"><br>   
+       <img class="hoi" src="pp tt.png" width="250" height="250"><br>
            <a target="_blank" href="https://www.tiktok.com/@gamakagami">Link</a>
             </center>
         </div>
