--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="kon">
 <h2>Hello, My name is Gabriel Anderson. 
     <br>
-    I am a freshman at Binus University majoring in computer science.</h2>
+    I am a freshman at Binus University.</h2>
 </div>
 <div class="non" style="
     border:1px solid wheat;
