--- a/ha.html
+++ b/ha.html
@@ -27,6 +27,7 @@
         <br>
         <br>
         Nim : 2702256315<br><br>
+        Major : Computer science<br><br>    
         Class : L1AC
         <br><br>
         Gender : <input  type="radio" name="m" checked   ><label>Male</label>
