--- a/ha.html
+++ b/ha.html
@@ -40,7 +40,8 @@
         Hobbies : Playing games<br>
                    Watching anime<br>
                 Playing badminton<br><br>
-                Favorite food : Ramen<br>
+                Favorite food : Ramen<br><br>
+        My mental state : &#128128
     </div>
 </body>
 </html>
