--- a/ha.html
+++ b/ha.html
@@ -27,13 +27,13 @@
         <br>
         <br>
         Nim : 2702256315<br><br>
-        Major : Computer science<br><br>    
+        &nbsp&nbsp  Major : Computer science<br><br>    
         Class : L1AC
         <br><br>
-        Gender : <input  type="radio" name="m" checked   ><label>Male</label>
+        &nbsp&nbsp&nbsp&nbspGender : <input  type="radio" name="m" checked   ><label>Male</label>
         <input  type="radio" name="m"><label>Female</label>
         <br><br>
-        Programming : <input type="checkbox" checked><label>Python</label>
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspProgramming : <input type="checkbox" checked><label>Python</label>
         <input type="checkbox" checked><label>CSS</label>    
         <input type="checkbox" checked><label>HTML</label> 
         <br><br>
@@ -41,7 +41,7 @@
                    Watching anime<br>
                 Playing badminton<br><br>
                 Favorite food : Ramen<br><br>
-        My mental state : &#128128
+                Mental state : &#128128
     </div>
 </body>
 </html>
