--- a/ha.html
+++ b/ha.html
@@ -38,8 +38,8 @@
         <input type="checkbox" checked><label>HTML</label> 
         <br><br>
         Hobbies : Playing games<br>
-                   Watching anime<br>
-                Playing badminton<br><br>
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Watching anime<br>
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspPlaying badminton<br><br>
                 Favorite food : Ramen<br><br>
                 Mental state : &#128128
     </div>
